# GPTunes

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  main.tf  providers.tf  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  variables.tf
.github/workflows/: autoformat_and_lint.yml  deploy_docker_image.yml  terraform_apply.yml
infra/: backend.tf  create_backend.sh  initial_setup.sh  main.tf  providers.tf  variables.tf
infra/envs/dev/: config.tfvars
infra/envs/main/: config.tfvars
infra/modules/artifact_registry/: main.tf  variables.tf
infra/modules/cloud_run/: main.tf  variables.tf
src/: Dockerfile  authenticate_spotify.py  frontend.py  main.py  playlist_generator.py  playlist_publisher.py  prompt.py  start_frontend.sh  theme_picker.py  utils.py
src/assets/: styles.css
