[metadata]
name = GPTunes
author = Emiel de Heij
description = A cloud-based service that generates a weekly themed playlist on Spotify using the LLMs
     and the Spotify API.
keywords = playlist generator spotify gpt cloud function
version = 0.1.0
classifiers =
    Programming Language :: Python :: 3.9

[options]
install_requires =
    spotipy>=2.19.0
    google-cloud-storage>=1.42.0
    google-cloud-secret-manager>=2.5.0
    requests>=2.26.0
    pandas>=1.3.2
    openai>=0.27.4
    fastapi>=0.70.0
    uvicorn>=0.15.0
    dirtyjson>=1.0.8
    pillow>=9.5.0
    faker>=18.4.0
# When updating the required installs, make sure to run 'make dependencies' afterwards.
